:arrow_up: Upgrade Netbox version to 4.2.3

--- a/env/netbox.env
+++ b/env/netbox.env
@@ -32,3 +32,5 @@ SKIP_SUPERUSER=false
 SUPERUSER_PASSWORD=thisnetboxisnot4u
 SUPERUSER_API_TOKEN=only4testingpurpose
 WEBHOOKS_ENABLED=true
+VM_AGENT_BODY_TEMPLATE=cGxlYXNlIGNoYW5nZSB0aGF0
+VM_AGENT_BASE_URL=http://my.agent.com
