--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,13 @@ services:
     netbox:
         image: ${IMAGE}:${TAG}
         ports:
-          - 8080:8080
+            - 8080:8080
         depends_on:
             postgres:
                 condition: service_healthy
-            valkey:
+            redis:
                 condition: service_started
-            valkey-cache:
-                condition: service_started
-        user: 'unit:root'
+        user: "unit:root"
         healthcheck:
             interval: 60s
             start_period: 60s
@@ -23,7 +21,7 @@ services:
             - netbox-reports-files:/opt/netbox/netbox/reports
             - netbox-scripts-files:/opt/netbox/netbox/scripts
     postgres:
-        image: docker.io/postgres:15-alpine
+        image: postgres:18
         env_file: env/postgres.env
         healthcheck:
             interval: 60s
@@ -32,15 +30,11 @@ services:
             retries: 5
             test: "pg_isready -U $$POSTGRES_USER"
         volumes:
-            - netbox-postgres-data:/var/lib/postgresql/data
-    valkey:
-        image: valkey/valkey:7-alpine
+            - netbox-postgres-data:/var/lib/postgresql
+    redis:
+        image: redis:8
         volumes:
             - netbox-valkey-data:/data
-    valkey-cache:
-        image: valkey/valkey:7-alpine
-        volumes:
-            - netbox-valkey-cache-data:/data
 volumes:
     netbox-media-files:
         driver: local
