--- a/env/netbox.env
+++ b/env/netbox.env
@@ -19,11 +19,11 @@ HOUSEKEEPING_INTERVAL=86400
 MEDIA_ROOT=/opt/netbox/netbox/media
 METRICS_ENABLED=false
 REDIS_CACHE_DATABASE=1
-REDIS_CACHE_HOST=valkey-cache
+REDIS_CACHE_HOST=redis
 REDIS_CACHE_INSECURE_SKIP_TLS_VERIFY=false
 REDIS_CACHE_SSL=false
 REDIS_DATABASE=0
-REDIS_HOST=valkey
+REDIS_HOST=redis
 REDIS_INSECURE_SKIP_TLS_VERIFY=false
 REDIS_SSL=false
 RELEASE_CHECK_URL=https://api.github.com/repos/netbox-community/netbox/releases
